--- a/references.bib
+++ b/references.bib
@@ -4,7 +4,7 @@
     language     = {english},
 }
 
-@masterthesis{Delaunay,
+@masterthesis{Terekhov,
     title        = {Генерация текстурного меша и упаковка полигональных текстур в атлас},
     author       = {Терехов, Дмитрий Евгеньевич},
     language     = {russian},
@@ -226,12 +226,6 @@
     doi           = {10.1109/34.31447}
 }
 
-@article{Terekhov,
-    author          = {Терехов Д.Е.},
-    title           = {Генерация текстурного меша и упаковка полигональных текстур в атлас},
-    year            = {2019}
-}
-
 @article{shewchuk97a,
     author          = {Jonathan Richard Shewchuk},
     title           = {Adaptive {P}recision {F}loating-{P}oint {A}rithmetic and {F}ast {R}obust {G}eometric {P}redicates},
@@ -426,4 +420,40 @@ clipping and offsetting lines and polygons},
     pages         = {},
     title         = {On Evolution, Search, Optimization, Genetic Algorithms and Martial Arts - Towards Memetic Algorithms},
     journal       = {Caltech Concurrent Computation Program}
+}
+
+@inbook{TheoPavlidis,
+    title        = {Algorithms for Graphics and Image Processing},
+    author       = {Pavlidis, T.},
+    language     = {english},
+    year         = {1982},
+    doi          = {10.1007/978-3-642-93208-3}
+}
+
+@misc{MoorNeighbor,
+    title        = {Grids, Connectivity and Contour Tracing},
+    author       = {Toussaint, G.},
+    language     = {english},
+}
+
+@article{RadialSweep,
+    title        = {Evaluation of Stopping Criterion in Contour Tracing Algorithms},
+    author       = {Reddy, P.R. and Amarnadh, V. and Bhaskar, M},
+    language     = {english},
+    issn         = {0975-9646},
+    journal      = {International Journal of Computer Science and Information Technologies},
+    volume       = {3},
+}
+
+@article{TwoEars,
+    issn         = {00029890, 19300972},
+    url          = {http://www.jstor.org/stable/2319703},
+    author       = {G. H. Meisters},
+    journal      = {The American Mathematical Monthly},
+    number       = {6},
+    pages        = {648--651},
+    publisher    = {Mathematical Association of America},
+    title        = {Polygons Have Ears},
+    volume       = {82},
+    year         = {1975}
 }
