--- a/thesis.tex
+++ b/thesis.tex
@@ -19,6 +19,7 @@
 
 \newcommand*\gsegment[1]{\overline{#1}}
 \newcommand*\gline[1]{\overleftrightarrow{#1}}
+\newcommand*\gray[1]{\overrightarrow{#1}}
 \newcommand*\talgref[1]{Алгоритм \ref{#1}}
 
 \author{Терехов Дмитрий Евгеньевич}
@@ -156,20 +157,40 @@
    Существующие алгоритмы не удовлетворяют нужды упаковки текстур в атласы, поэтому данная работа предлагает оригинальную реализацию Memetic algorithm \cite{WhatIsMemetic} -- расширение генетического алгоритма, которое использует локальный поиск для уменьшения вероятности преждевременной сходимости. Разработанный алгоритм способен упаковывать изображения со свободным поворотом, на которых находятся множество разрозненных объектов с дырами.
 
     \section{Алгоритмы, структуры данных и математические методы}
-    \subsection{Этапы полигональной упаковки}
-    \begin{itemize}
-        \item Трассировка контура изображений;
-        \item Аппроксимация полученных контуров;
-        \item Упаковка полигональных изображений в текстурные атласы.
-    \end{itemize}
+
     \subsection{Трассировка контура}
     Алгоритмы выделения контура можно разделить на 3 типа: обход попиксельно, обход повершинно, run-data.
+
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}[t]{0.32\linewidth}
+            \centering
+            \includegraphics[scale=0.36]{images/pixel_following_algorithm.png}
+            \caption{Обход попиксельно}
+        \end{subfigure}
+        \begin{subfigure}[t]{0.32\linewidth}
+            \centering
+            \includegraphics[scale=0.36]{images/vertex_following-algorithm.png}
+            \caption{Обход повершинно}
+        \end{subfigure}
+        \begin{subfigure}[t]{0.32\linewidth}
+            \centering
+            \includegraphics[scale=0.36]{images/run_data_algorithm.png}
+            \caption{Run data}
+        \end{subfigure}
+    \end{figure}
+
     \subsubsection{Обход попиксельно}
-    Метод выделения контура обходом попиксельно начинает с какого-либо стартового пикселя и пиксель за пикселем обходит контур изображения предопределенным образом, а затем сохраняет их координаты в памяти в соответствии с порядком трассировки. Наиболее известные алгоритмы обхода контура попиксельно: Moore-neighbor tracing \cite{MoorNeighbor}, radial sweep \cite{RadialSweep} и алгоритм Theo Pavlidis \cite{TheoPavlidis}.
+
+    Методы выделения контура начинаются с пикселя и обходят контуры изображения образом специфичным для метода, а затем сохраняет их координаты в памяти в соответствии с порядком обхода. Наиболее известные алгоритмы обхода контура попиксельно: Moore-neighbor tracing \cite{MoorNeighbor}, radial sweep \cite{RadialSweep} и алгоритм Theo Pavlidis \cite{TheoPavlidis}.
+
     \subsubsection{Обход повершинно}
+
     Метод выделения контура обходом повершинно отличается от обхода попиксельно лишь тем, что обход осуществляется по границам пикселя.
+
     \subsubsection{Run-data}
-    Run-data методы выделения контура проходят по изображению сканирующей линией оставляя определенные метки на встреченном граничном пикселе. Далее по расставленным меткам восстанавливается контур изображения. Примеры методов этой группы: run-type direction code\cite{Miyatake1997}, методы, основанные на PXY таблице\cite{Shoji}. Отличительной особенностью run-data методов является возможность выделения внешних и внутренних контуров, сохраняя иерархию. Так же способ обхода изображения в некоторых алгоритмах позволяет не держать в памяти изображение целиком.
+
+    Run-data методы выделения контура проходят по изображению сканирующей линией оставляя зависящие от конкретного алгоритма метки на встреченном граничном пикселе. Далее по расставленным меткам восстанавливается контур изображения. Примеры методов этой группы: run-type direction code \cite{Miyatake1997}, методы, основанные на PXY таблице \cite{Shoji}. Отличительной особенностью run-data методов является возможность выделения внешних и внутренних контуров, сохраняя иерархию. Так же способ обхода изображения в некоторых алгоритмах позволяет не держать в памяти изображение целиком.
 
     Было решено выбрать алгоритм именно из этой группы методов, так как необходимо выделять дырки на объектах. За основу был взят алгоритм Suzuki Satoshi \cite{SuzukiAlgorithm}, использующийся в библиотеке OpenCV. Алгоритм способен построить иерархию контуров и типизировать их на границы и дыры.
 
@@ -193,7 +214,7 @@
 
     Алгоритм оперирует с дискретными координатами пикселей, а в компьютерной графике UV координаты это непрерывные вещественные числа. Такое представление контура создает некоторые проблемы.
 
-    Во-первых, может получится контур с самопересечениями, которые нетривиально разрешить. На \ref{SelfIntersectingContours} изображены примеры контуров с самопересечением. Красным обозначены вершины, которые алгоритм посещает дважды.
+    Во-первых, может получится контур с самопересечениями, которые нетривиально разрешить. На Рис. \ref{SelfIntersectingContours} изображены примеры контуров с самопересечением. Красным обозначены вершины, которые алгоритм посещает дважды.
     \begin{figure}[H]
         \centering
         \begin{subfigure}[t]{.49\linewidth}
@@ -210,7 +231,7 @@
         \label{SelfIntersectingContours}
     \end{figure}
 
-    Во-вторых, некоторые пиксели при отрисовке будут обрезаны, т.к. дискретные координаты пикселя в прямой интерпретации в качестве UV координат будут являются координатами левого верхнего угла пикселя. В таком случае, нижние и правые пиксели просто не будут учтены при отрисовке.
+    Во-вторых, некоторые пиксели при отрисовке будут обрезаны, так как дискретные координаты пикселя в прямой интерпретации в качестве UV координат будут являются координатами левого верхнего угла пикселя. В таком случае, нижние и правые пиксели просто не будут учтены при отрисовке.
 
     \begin{figure}[H]
         \centering
@@ -237,8 +258,8 @@
         \setstretch{1}
         \caption{Pixel contour to vertex contour}
         \begin{algorithmic}[1]
-            \State $C$ is an ordered countour
-            \State $p \gets C_0$ is a current position\textbackslash vertex
+            \State $C$ is an ordered contour
+            \State $p \gets$  top left vertex of $C_0$
             \State $texel \gets C_0$ is a current texel coordinates (correspond to texel center)
             \State $TraceTexel$ traces all vertices of $texel$ in a CCW order until the vertex of $nextTexel$ is met
             \For{$i$ \textbf{from} 1 \textbf{to} $\left|C\right| - 1$}
@@ -246,12 +267,12 @@
                 \State $p \gets TraceTexel\left(p, texel, nextTexel\right)$
                 \State $texel \gets nextTexel$
             \EndFor
-            \State $TraceTexel\left(texel, C_0, p\right)$
+            \State $TraceTexel\left(p, texel, C_0\right)$
             \State Resulting vertex contour consists of all traced vertices
         \end{algorithmic}
     \end{algo}
 
-    Зная локальные координаты вершины относительно текселя, можно легко определить как принадлежность вершины к текселю, так и следующую вершину против часовой стрелки. Для перехода к локальным координатам, очевидно, нужно просто отнять координаты текселя. Вершина принадлежит текселю, если локальные координаты относительно текселя удовлетворяют неравенству $ 0 \leq x, y \leq 1$.
+    Зная локальные координаты вершины относительно текселя, можно легко определить как принадлежность вершины к текселю, так и следующую вершину против часовой стрелки. Для перехода к локальным координатам нужно отнять координаты текселя. Вершина принадлежит текселю, если локальные координаты относительно текселя удовлетворяют неравенству $ 0 \leq x, y \leq 1$.
 
     \begin{figure}[H]
         \centering
@@ -284,58 +305,33 @@
 
     \subsection{Аппроксимация полигонов}
     \label{PolygonApproximation}
-    Аппроксимация полигонов для текстурных мешей отличается от аппроксимации полигонов, например, в GIS системах: запрещено нарушать искомые границы, а так же необходимо минимизировать не только количество вершин, но и добавочную площадь. Мета-алгоритм можно описать следующим образом:
 
-    \begin{algo}[H]
-        \setstretch{1}
-        \caption{Meta-algorithm for a set of polygons approximation}
-        \begin{algorithmic}[1]
-            \State $frame$ is a tree of polygons represented as DCELS
-            \State $topology$ is a constrained Delaunay triangulation
-            \State $minExtractor$ is a BST containing vertices sorted by transformation cost
-            \While {Termination Condition is not achieved}
-                \If {$!TryApproximate\left(\right)$ and $!TryMerge\left(\right)$}
-                    \State \textbf{break}
-                \EndIf
-            \EndWhile
-            \State \textbf{return} $RetrieveImage()$
-        \end{algorithmic}
-    \end{algo}
+    Аппроксимация полигонов для текстурных мешей отличается от аппроксимации кривых, например, в GIS системах: аппроксимированный полигон должен быть надмножеством исходного, а так же необходимо минимизировать не только количество вершин, но и добавочную площадь.
 
-    На стадии инициализации создаются две модели множества полигонов. Первая модель это дерево полигонов, где каждый узел дерева это полигон $P_i$, представленный двусвязным зацикленным списком вершин $P_i = \left(v_j\right)_{j=0}^{n - 1}$, $v_{j \pm m}$ подразумевает $v_{j \pm m \pmod n}$. Корнем дерева является ограничивающая рамка ($frame$). Вторая модель ($topology$) это триангуляция Делоне с ограничениями. В реализации алгоритма использовался пакет, разработанный в рамках бакалаврской выпускной квалификационной работы \cite{Delaunay}. Триангуляция Делоне это мощнейший инструмент для проверки преобразований над полигонами, а также вычисления полигона видимости. Также на стадии инициализации происходит подсчет минимальной возможной трансформации для каждой вершины. "Стоимость" трансформации измеряется в добавочной площади. Для быстрого поиска минимальной трансформации (т.е. трансформации с минимальной стоимостью) используется сбалансированное дерево поиска ($minExtractor$).
+    Разработанный алгоритм действует следующим образом. Для каждой вершины рассчитываются возможные трансформации. Каждая трансформация удаляет одну вершину, но добавляет некоторую площадь, занимаемую прозрачными пикселями. Эта добавочная площадь является стоимостью преобразования. На каждом шаге алгоритм либо выполняется минимальное преобразование среди всех вершин, либо сливает два полигона в один. Так происходит до тех пор, пока не будет достигнуто условие выхода либо невозможно будет выполнить шаг алгоритма.
 
-    Далее выполняются преобразования или сливаются полигоны, пока не условие выхода не будет достигнуто. Процедура $RetrieveImage$ возвращает объект типа $Image$. $Image$ содержит в себе все вершины и индексных массив (массив троек индексов вершин), а также массив объектов типа $ImageObject$. Объектом картинки называется граничный контур со всеми принадлежащими ему дырами. $ImageObject$ содержит в себе индексы вершин для контура и всех дыр, а также индексы троек индексов, ему принадлежащих. Данные структуры данных в дальнейшем используются для упаковки.
+    Полигон $P_i$ представляется двусвязным зацикленным списком вершин $P_i = \left(v_j\right)_{j=0}^{n - 1}$. Здесь и далее обозначение $v_{j \pm m}$ обозначает взятие по модулю $v_{j \pm m \pmod n}$.
 
     \subsubsection{Преобразования над вершинами}
-    Стоимостью преобразования является добавляемая площадь площадь, которая представляет из себя один или два треугольника. Возможность преобразования проверяется путем вставки в триангуляцию структурных ребер и проверки на существование определенного треугольника. Данная проверка необходима для того, чтобы избежать случаев, когда какая-то другая граница попадает в добавочную площадь.
-
-    \begin{figure}[H]
-        \centering
-        \includegraphics[scale=1]{images/triangle_existance_check.png}
-        \caption{Соседняя граница попадает в добавочную площадь}
-    \end{figure}
+    Рассмотрим возможные преобразования над вершинами.
 
     \paragraph{Удаление вершин, лежащий на одной прямой}
-    Очевидно, данная трансформация имеет нулевую стоимость и проста в реализации.
+
+    Данная трансформация имеет нулевую стоимость и проста в реализации.
+
     \paragraph{Удаление вогнутого/выпуклого угла}
-    Если вершина $v_i$ принадлежит границе или дыре и образует вогнутый или выпуклый угол соответственно, то возможно провести отрезок $\gsegment{v_{i - 1}v_{i + 1}}$ и удалить вершину $v_i$. Также из теоремы о двух ушах следует, что любой последовательностью  таких преобразований можно сократить дыру до треугольника. Теорема о двух ушах гласит, что в каждом просто полигоне с более чем 3 вершинами есть хотя бы 2 уха. Ухом называется вершина, соседние вершины которой можно соединить отрезком, который будет полностью лежать внутри полигона.
+
+    Если вершина $v_i$ принадлежит границе или дыре и образует вогнутый или выпуклый угол соответственно, то возможно провести отрезок $\gsegment{v_{i - 1}v_{i + 1}}$ и удалить вершину $v_i$. Также из теоремы о двух ушах \cite{TwoEars} следует, что любой последовательностью  таких преобразований можно сократить дыру до треугольника. Теорема о двух ушах гласит, что в каждом просто полигоне с более чем 3 вершинами есть хотя бы 2 уха. Ухом называется вершина, соседние вершины которой можно соединить отрезком, который будет полностью лежать внутри полигона.
 
     \begin{figure}[H]
         \centering
         \includegraphics[scale=1]{images/earcut.png}
         \caption{Удаление вогнутого угла}
     \end{figure}
-    \paragraph{Пересечение сторон}
-    Если $v_i$ образует выпуклый угол, то может существовать возможность заменить вершину $v_i$ и $v_{i + 1}$ пересечением прямых $\gline{v_{i - 1}v_i}$ и $\gline{v_{i + 1}v_{i + 2}}$. Для проверки возможности такого преобразования необходимо предварительно проверить знак параметра при пересечении прямых, используя векторное параметрическое уравнение ($\vec{r} = \vec{r_0} + t \cdot \vec{u}$).
 
-    \begin{figure}[H]
-        \centering
-        \includegraphics[scale=1]{images/bendneighbor2.png}
-        \caption{Пересечение сторон}
-    \end{figure}
+    \paragraph{Частичное удаление вогнутого угла}
 
-    \paragraph{Выгибание соседней вершины}
-    Данное преобразование является оптимизированной версией удаления вогнутого угла. Если $\gline{v_{i - 2}v_{i - 1}}$ пересекает $\gsegment{v_iv_{i + 1}}$, то можно не отрезать весь угол, а заменить $v_{i - 1}$ и $v_{i}$ пересечением. Аналогично работает для $\gline{v_{i + 2}v_{i + 1}}$ и $\gsegment{v_iv_{i - 1}}$.
+    Данное преобразование является качественной версией удаления вогнутого угла (имеет меньшую стоимость). Если $\gray{v_{i - 2}v_{i - 1}}$ пересекает $\gsegment{v_iv_{i + 1}}$, то можно не отрезать весь угол, а заменить $v_{i - 1}$ и $v_{i}$ пересечением. Аналогично работает для $\gray{v_{i + 2}v_{i + 1}}$ и $\gsegment{v_iv_{i - 1}}$.
 
     \begin{figure}[H]
         \centering
@@ -343,15 +339,29 @@
         \caption{Выгибание соседней вершины}
     \end{figure}
 
+    \paragraph{Пересечение сторон}
+
+    Если $v_i$ образует выпуклый угол, то может существовать возможность заменить вершину $v_i$ и $v_{i + 1}$ пересечением $\gray{v_{i - 1}v_i}$ и $\gray{v_{i + 2}v_{i + 1}}$.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/bendneighbor2.png}
+        \caption{Пересечение сторон}
+    \end{figure}
+
     \paragraph{Выгибание двух соседних вершин}
-    Пусть $v_{i - 1}$, $v_{i}$ и $v_{i + 1}$ являются вершинами выпуклых углов, тогда можно попробовать заменить все 3 вершины пересечением $\gline{v_{i - 2}v_{i - 1}}$ и $\gline{v_{i + 2}v_{i + 1}}$ с вертикальной или горизонтальной прямой, проходящей через $v_i$.
+
+    Пусть $v_{i - 1}$, $v_{i}$ и $v_{i + 1}$ являются вершинами выпуклых углов, тогда можно попробовать заменить все 3 вершины пересечением $\gray{v_{i - 2}v_{i - 1}}$ и $\gray{v_{i + 2}v_{i + 1}}$ с вертикальной или горизонтальной прямой, проходящей через $v_i$.
+
     \begin{figure}[H]
         \centering
         \includegraphics[scale=1]{images/bendoutboth.png}
         \caption{Выгибание двух соседних вершин к вертикальной прямой}
     \end{figure}
+
     \paragraph{Удаление треугольной дыры}
-    Если дыра упростилась до треугольника и внутри нет граничных полигонов, то единственная возможная трансформация для этих вершин -- удаление всей треугольной дыры. Это также влечет за собой удаление полигона из дерева полигонов.
+
+    Если дыра упростилась до треугольника и внутри нет граничных полигонов, то единственная возможная трансформация для этих вершин -- удаление всей треугольной дыры.
 
     \begin{figure}[H]
         \centering
@@ -360,7 +370,8 @@
     \end{figure}
 
     \subsubsection{Слияние полигонов}
-    В каждой полигональной дыре (включая $frame$) выбирается 2 пары последовательных вершин из разных полигонов, которые образуют минимальный четырехугольник, который не пересекает другие стороны. Данные 4 вершины являются точками слияния.
+
+    В каждой полигональной дыре выбирается 2 пары последовательных вершин из разных полигонов, которые образуют минимальный четырехугольник, который не пересекает другие стороны. Данные 4 вершины являются точками слияния.
 
     \begin{figure}[H]
         \centering
@@ -376,7 +387,15 @@
         \end{subfigure}
     \end{figure}
 
-    Нахождение пар точек для потенциального слияния осуществляется с помощью сопоставления полигонов видимости. На рисунке \ref{VP} показаны полигоны видимости двух соседних вершин. Красным отмечена вершина запроса. Фиолетовым отмечены интересующие нас вершины, через которые можно потенциально слить полигоны. Серым отмечены либо вершины, принадлежащие тому же полигону, что и вершина запроса, либо точки, не являющиеся вершинами полигона.
+    Нахождение пар точек для потенциального слияния осуществляется с помощью сопоставления полигонов видимости. Полигон видимости для точки $p$ это полигональная область точек плоскости, видимых из точки $p$.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.35]{images/visibility_polygon.png}
+        \caption{Полигон видимости}
+    \end{figure}
+
+    На Рис. \ref{VP} показаны полигоны видимости двух соседних вершин. Красным отмечена вершина запроса. Фиолетовым отмечены интересующие нас вершины, через которые можно потенциально слить полигоны. Серым отмечены либо вершины, принадлежащие тому же полигону, что и вершина запроса, либо точки, не являющиеся вершинами полигона.
 
     \begin{figure}[H]
         \centering
@@ -396,16 +415,55 @@
 
     Пусть у нас есть вершины 2 последовательные вершины $prev$ и $current$ некоторого полигона $P$. Также для них известны полигоны видимости $V_{prev}$ и $V_{current}$. Тогда для каждой точки $q \in V_{current}$, являющийся вершиной полигона, но $q \notin P$, необходимо проверить, $next\left(q\right) \in V_{prev}$. Если $next\left(q\right) \in V_{prev}$ значит 2 полигона можно слить через вершины $prev, next\left(q\right), q, current$ (проверив при этом отсутствие самопересечений). Запрос о нахождении точки в полигоне видимости можно выполнить за $O\left(\log \left|V\right|\right)$ при помощи бинарного поиска, так как вершины полигона видимости отсортированы по полярному углу относительно точки запроса.
 
-    В данной работе был реализован Triangular expansion\cite{TriangularExpansion} алгоритм для нахождения полигона видимости в триангуляции. Данный алгоритм для точки запроса $q$ в полигоне $P$ сначала находит треугольник, содержащий точку. Очевидно, что $q$ видит весь треугольник и к полигону видимости можно добавить все ребра, которые принадлежат $\delta P$. Для всех других ребер вызывается рекурсивная процедура, которая расширяет поле зрения $q$ через ребро. Изначально поле зрения q ограничивается концами ребра, однако, по мере углубления в рекурсию, поле зрение может быть дополнительно ограничено. Алгоритм затрачивает $O\left(nh\right)$ времени и $O\left(n\right)$ памяти, где $h$ это количество дыр. Но на практике алгоритм часто затрачивает сублинейное время, так как затрагивает только треугольники, которые на самом деле видны.
+    \begin{algo}[H]
+        \setstretch{1}
+        \caption{Can merge polygon with other through given two consecutive vertices}
+        \begin{algorithmic}[1]
+            \State $current,\;prev$ are two consecutive vertices of $P$
+            \State $vp \gets FindVisibilityPolygon\left(current\right)$
+            \State $pvp \gets FindVisibilityPolygon\left(prev\right)$
+            \State $minArea \gets \infty$
+            \State $minPair \gets None$
+            \For{$v \in vp$}
+                \If{$v \in P$ \textbf{or} $v$ \textbf{is not} vertex of any other polygon}
+                    \State \textbf{continue}
+                \EndIf
+                \State $Q \gets PolygonOf\left(v\right)$
+                \State $vNext \gets NextVertex(Q,\;v)$
+                \If{$vNext \in pvp$ \textbf{and} $\gsegment{prev, current} \cap \gsegment{v, vNext} =\emptyset$}
+                    \State $area \gets AreaOfQuadrilateral\left(prev,\;current,\;v,\;vNext\right)$
+                    \If{$area < minArea$}
+                        \State $minArea \gets area$
+                        \State $minPair \gets \left(v,\;vNext\right)$
+                    \EndIf
+                \EndIf
+            \EndFor
+            \State \textbf{return} $minPair$
+        \end{algorithmic}
+    \end{algo}
+
+    В данной работе был реализован алгоритм Triangular Expansion \cite{TriangularExpansion} для нахождения полигона видимости в триангуляции. Данный алгоритм для точки запроса $q$ в полигоне $P$ сначала находит треугольник, содержащий точку. Очевидно, что $q$ видит весь треугольник и к полигону видимости можно добавить все ребра, которые принадлежат $\partial P$. Для всех других ребер вызывается рекурсивная процедура, которая расширяет поле зрения $q$ через ребро. Изначально поле зрения q ограничивается концами ребра, однако, по мере углубления в рекурсию, поле зрение может быть дополнительно ограничено. Алгоритм затрачивает $O\left(nh\right)$ времени и $O\left(n\right)$ памяти, где $h$ это количество дыр. Но на практике алгоритм часто затрачивает сублинейное время, так как затрагивает только треугольники, которые на самом деле видны.
 
     \subsubsection{Применение преобразований}
-    На каждой итерации цикла применяется аппроксимирующее преобразование с минимальной стоимостью. После применения преобразования пересчитываются преобразования соседних вершин.
-    Аппроксимация соседних контуров или объемлющей дыры могут повлияет на валидность посчитанного преобразования, поэтому при неудачной попытке преобразование для вершины пересчитывается и вершина кладется обратно в $minExtractor$. Такой ленивый пересчет позволяет избежать огромных временных затрат, так как любая трансформация может в худшем случае повлиять на трансформацию $O\left(n\right)$ вершин. Однако на практике такое встречается редко.
+
+    В данном алгоритме используется триангуляция Делоне с ограничениями в качестве одного из представлений множества полигонов. Ограниченные ребра задают границы полигонов. Операции над триангуляцией Делоне позволяют эффективно проверять возможность трансформации. Вставка вершин и структурных ребер позволяет проверить возможность совершения геометрического преобразования, а проверка на наличие треугольника  позволяет проверить случаи, когда преобразование полностью включает в себя сторонний полигон (Рис. \ref{TriangleExistenceCheck}). Для построения триангуляции используется программный пакет \cite{Terekhov}, разработанный автором.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/triangle_existance_check.png}
+        \caption{Проверка на наличие треугольника}
+        \label{TriangleExistenceCheck}
+    \end{figure}
+
+    Вершины дополнительно хранятся в двоичном дереве поиска, отсортированной по стоимости их преобразования. На каждой итерации цикла применяется аппроксимирующее преобразование с минимальной стоимостью. После применения преобразования пересчитываются преобразования соседних вершин. Аппроксимация соседних контуров или объемлющей дыры могут повлияет на валидность посчитанного преобразования. При неудачной попытке произвести преобразование, преобразование для вершины пересчитывается, берется новая вершина из дерева и попытки повторяются. Такой ленивый пересчет позволяет избежать больших временных затрат, так как любая трансформация может в худшем случае повлиять на трансформацию $O\left(n\right)$ вершин. Однако на практике такое встречается редко.
 
     \subsubsection{Вычислительная устойчивость}
-    Вычислительная устойчивость алгоритма достигается использованием вычислительно устойчивых геометрических предикатов, разработанных Jonathan Shewchuk\cite{shewchuk97a}. Данные предикаты также используются для построения Делоне с ограничениями.
+
+    Вычислительная устойчивость алгоритма достигается использованием вычислительно устойчивых геометрических предикатов, разработанных Jonathan Shewchuk \cite{shewchuk97a}. Данные предикаты также используются для построения Делоне с ограничениями.
+
     \subsubsection{Меш}
-    В дальнейшем для упаковки и отрисовки в атлас понадобится меш всех объектов на изображении. Так как для аппроксимации создается триангуляция Делоне, то достаточно выбрать из неё нужные треугольники. Для этого достаточно запустить обход в глубину триангуляции. Основой триангуляции является структура данных Halfedge \cite{Halfedge}, представляющая собой ориентированное ребро с указателем на следующее и соседнее (ориентированное в обратном направлении) ребро. Каждое структурное (constrained) ребро триангуляции является ребром одного из полигонов. Значит, при переходе через такое ребро мы входим или выходим в/из площади объекта на картинке.
+
+    Для отрисовки объектов в игре понадобится получить текстурный меш из аппроксимированного контура. Так как для аппроксимации создается триангуляция Делоне, то необходимо просто выбрать из неё нужные треугольники. Для этого достаточно запустить обход в глубину триангуляции. Основой триангуляции является структура данных Halfedge \cite{Halfedge}, представляющая собой ориентированное ребро с указателем на следующее и соседнее (ориентированное в обратном направлении) ребро. Каждое ограниченное ребро триангуляции является ребром одного из полигонов. Значит, при переходе через такое ребро мы входим или выходим в/из площади объекта на картинке.
 
     \begin{algo}[H]
         \setstretch{1}
@@ -436,7 +494,8 @@
     \end{algo}
 
     \subsection{Генетический алгоритм}
-    Основная идея всех эволюционных алгоритмов одинаково: популяция особей в некоторой среде конкурирует за ограниченные ресурсы, конкуренция приводит к естественному отбору -- выживает наиболее приспособленный. Каждая особь представляет собой элемент в области определения функции приспособленности (fitness or evaluation function, функции оценки), которую необходимо минимизировать. Изначально создается популяции из случайных значений из области определения функции. Затем отбираются лучшие особи, которые подвергаются воздействую операторов вариации (рекомбинации и\textbackslash или мутации). Из полученной популяции только часть наиболее приспособленных особей доживает до нового поколение. И так повторяется до тех пор, пока не будет достигнуто желаемое решение. Генетический мета-алгоритм показан в \talgref{meta-genetics}.
+
+    Основная идея всех эволюционных алгоритмов одинакова: популяция особей в некоторой среде конкурирует за ограниченные ресурсы, конкуренция приводит к естественному отбору -- выживает наиболее приспособленный. Каждая особь представляет собой элемент в области определения функции приспособленности (fitness or evaluation function, функции оценки), которую необходимо минимизировать. Изначально создается популяции из случайных значений из области определения функции. Затем отбираются лучшие особи, которые подвергаются воздействую операторов вариации (рекомбинации и\textbackslash или мутации). Из полученной популяции только часть наиболее приспособленных особей доживает до нового поколение. И так повторяется до тех пор, пока не будет достигнуто желаемое решение. Генетический мета-алгоритм показан в \talgref{meta-genetics}.
 
     \begin{algo}[H]
         \setstretch{1}
